  - The environment variable `CHICKEN_PREFIX` has been removed.
  - Added the `glob->sre` procedure to the irregex library.
  - Removed the `get-host-name' and `system-information' procedures.
    These are available in the "system-information" egg.
  - Removed the `eval-when`, `select` and `ensure` macros.  These are
    available in the "miscmacros" egg.
  - Renamed bit-set? to bit->boolean because of swapped argument order
    with respect to SRFI-33 and SRFI-60, which was confusing (fixes
    #1385, thanks to Lemonboy).
  - file-{read,write,execute}-access will now raise an exception when
    the file doesn't exist or some other non-access related problem is
    detected (fixes #1386, thanks to Vasilij Schneidermann).
  - `read-file` has been renamed to `read-list`.
  - The procedures for random numbers have been reimplemented;
    access to system-specific entropy is available, together with a reasonably
    good pseudo random number generator (WELL512).
  - `glob` now returns an empty list for non-existent or inaccessible
    directories, instead of erroring out.
  - `file-copy' and `file-move' have been renamed to `copy-file' and
    `move-file', for consistency with `delete-file' and `rename-file'.
  - `rename-file' now refuses to overwrite an existing file unless an
    optional "clobber" argument is provided.
  - The `r4rs` module no longer exports `eval`, which was not in R4RS.

- Module system
  - The compiler has been modularised, for improved namespacing.  This
    means names from the compiler should not leak out into the compiled
    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.
  - The "use" and "use-for-syntax" special forms have been removed
    in favor of "import" and "import-for-syntax" to reduce confusion.

- Syntax expander
  - Removed support for (define-syntax (foo e r c) ...), which was