@@ -1253,13 +1253,6 @@
   (lambda (x r c)
     `(,(r 'import) ,@(cdr x)))))
 
-(##sys#extend-macro-environment
- 'require-extension-for-syntax
- '()
- (##sys#er-transformer
-  (lambda (x r c)
-    `(,(r 'begin-for-syntax) (,(r 'require-extension) ,@(cdr x))))))
-
 
 ;;; Assertions
 
